--- a/HTML e CSS/Bootstrap e Design responsivo/Margin e Padding/index.html
+++ b/HTML e CSS/Bootstrap e Design responsivo/Margin e Padding/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Bootstrap - Margin e padding</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -11,45 +12,40 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    
-    <!-- Aplicação de Margin
-    mt -> Margin Top
-    mb -> Margin Bottom
-    ml -> Margin Left
-    mr -> Margin Right
-    mx -> Margin no eixo x (horizontal) esquerda/direita
-    my -> Margin no eixo y (vertical) top/bottom
-    m  -> Margin em todos os lados
-    Valor a definir (0 até 5)
-    -->
-    <h1 class="bg-success mt-5 mb-3">Margin</h1>
-    <p class="bg-success ml-4 my-2">Conteúdo principal</p>
-    <h1 class="bg-success m-5">Margin</h1>
+   <!--
+    Aplicação de Margin
+    mt - Margin top
+    mb - Margin bottom
+    ml - Margin left
+    mr - Margin right
+    mx - Margin no eixo x (horizontal) esquerda/direita
+    my - Margin no eixo y (verical) top/bottom
+    m - Margin em todos os lados 
+    valor a definir (0 até 5)
+   -->
 
-    <br>
-    <br>
+    <h1 class="bg-success">Margin</h1>
+    <p class="bg-success mb-1 mt-1 mx-5">Conteúdo Principal</p>
+    <h1 class="bg-success">Margin</h1>
 
-    <!-- Aplicação de Padding
-    pt -> Padding Top
-    pb -> Padding Bottom
-    pl -> Padding Left
-    pr -> Padding Right
-    px -> Padding no eixo x (horizontal) esquerda/direita
-    py -> Padding no eixo y (vertical) top/bottom
-    p  -> Padding em todos os lados
-    Valor a definir (0 até 5)
-    -->
-    <h1 class="bg-success mt-0">Padding</h1>
-    <p class="bg-success">Conteúdo principal</p>
-    <h1 class="bg-success">Padding</h1>
+     <br>
+     <hr>
+     <br>
 
-    <br>
-    <br>
+     <!--
+    Aplicação de Margin
+    pt - padding top
+    pb - padding bottom
+    pl - padding left
+    pr - padding right
+    px - padding no eixo x (horizontal) esquerda/direita
+    py - padding no eixo y (verical) top/bottom
+    p - padding em todos os lados 
+    valor a definir (0 até 5)
+   -->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+   <h1 class="bg-danger">Margin</h1>
+    <p class="bg-danger pt-2 pb-3 px-5">Conteúdo Principal</p>
+    <h1 class="bg-danger">Margin</h1>
   </body>
 </html>
